fixed horizontal scroll
added contact form

--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,10 @@
+.row {
+	margin-left: 0;
+	margin-right: 0;
+}
+
 .navbar {
-	margin: 0;
+	margin: 0px;
 	min-height: 75px;
 }
 
@@ -39,4 +44,43 @@ span {
 
 .heading {
 	text-align: center;
+}
+
+.thumbnail {
+	border: 0;
+}
+
+.down-button {
+	margin: 15px;
+	background-color: #18bc9c;
+	color: white;
+	border-width: 2px;
+	border-color: white;
+}
+
+.down-button span {
+	font-size: 15px;
+	padding-right: 2px;
+}
+
+.form-horizontal input {
+	padding: 25px 10px;
+	border-radius: 0;
+	border-width: 1.5px;
+	border-right: none;
+	border-bottom: none;
+	border-left: none;
+	box-shadow: inset 0 0 0 rgba(0, 0, 0, 0);
+}
+
+.form-group {
+	margin-bottom: 0; 
+}
+
+.form-horizontal button {
+	background-color: #18bc9c;
+	color: white;
+	border-width: 2px;
+	border-color: white;
+	border-radius: 8px;
 }
